--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,10 @@ dependencies:
   mask_text_input_formatter: ^2.9.0
   fluttertoast: ^8.2.12
   get: ^4.7.2
-
+  flutter_bluetooth_serial: ^0.4.0
+  intl: ^0.18.1
+  permission_handler: ^11.0.1
+  shared_preferences: ^2.0.0 
 
 dev_dependencies:
   flutter_test:
